fx-compat: Fix twisty color inverting on Mac
Since we're now using a much milder background color for table rows,
inverting the twisty's color looks wrong.

--- a/scss/mac/_virtualized-table.scss
+++ b/scss/mac/_virtualized-table.scss
@@ -8,10 +8,6 @@
 		}
 	}
 
-	.selected:not(.highlighted) .twisty svg {
-		fill: #fff;
-	}
-
 	.spacer-twisty {
 		min-width: 19px;
 	}
